--- a/package.json
+++ b/package.json
@@ -29,10 +29,12 @@
     "method-override": "^3.0.0",
     "mongoose": "^5.9.19",
     "passport": "^0.4.1",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "react-calendar": "^3.1.0"
   },
   "devDependencies": {
     "dotenv": "^8.2.0",
     "nodemon": "^2.0.4"
-  }
+  },
+  "keywords": []
 }
