--- a/client/package.json
+++ b/client/package.json
@@ -12,7 +12,10 @@
     "bcrypt": "^5.0.0",
     "nodemon": "^2.0.4",
     "react": "^16.13.1",
+    "react-calendar": "^3.1.0",
     "react-dom": "^16.13.1",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1"
   },
   "scripts": {
