--- a/package.json
+++ b/package.json
@@ -27,12 +27,14 @@
     "axios": "^0.19.2",
     "bcrypt": "^5.0.0",
     "bootstrap": "^4.5.0",
+    "config": "^3.3.1",
     "ejs": "^3.1.3",
     "express": "^4.17.1",
     "express-flash": "0.0.2",
     "express-session": "^1.17.1",
     "if-env": "^1.0.4",
     "method-override": "^3.0.0",
+    "mongodb": "^3.5.9",
     "mongoose": "^5.9.19",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0"
