--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
   "dependencies": {
     "axios": "^0.19.2",
     "bcrypt": "^5.0.0",
+    "bcryptjs": "^2.4.3",
     "bootstrap": "^4.5.0",
+    "concurrently": "^5.2.0",
     "ejs": "^3.1.3",
     "express": "^4.17.1",
     "express-flash": "0.0.2",
