--- a/package.json
+++ b/package.json
@@ -27,15 +27,19 @@
     "axios": "^0.19.2",
     "bcrypt": "^5.0.0",
     "bootstrap": "^4.5.0",
+    "cookie-parser": "^1.4.5",
     "ejs": "^3.1.3",
     "express": "^4.17.1",
     "express-flash": "0.0.2",
     "express-session": "^1.17.1",
     "if-env": "^1.0.4",
     "method-override": "^3.0.0",
+    "moment": "^2.27.0",
     "mongoose": "^5.9.19",
     "passport": "^0.4.1",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "react-big-calendar": "^0.26.0",
+    "react-event-calendar": "^0.3.0"
   },
   "devDependencies": {
     "dotenv": "^8.2.0",
