--- a/package.json
+++ b/package.json
@@ -41,7 +41,9 @@
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "react-big-calendar": "^0.26.0",
-    "react-event-calendar": "^0.3.0"
+    "react-event-calendar": "^0.3.0",
+    "simple-react-calendar": "^2.2.7",
+    "styled-components": "^5.1.1"
   },
   "devDependencies": {
     "dotenv": "^8.2.0",
