--- a/package.json
+++ b/package.json
@@ -40,8 +40,11 @@
     "mongoose": "^5.9.19",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
+    "prop-types": "^15.7.2",
     "react-big-calendar": "^0.26.0",
     "react-event-calendar": "^0.3.0",
+    "react-modern-datepicker": "^1.1.0",
+    "react-router": "^3.2.6",
     "simple-react-calendar": "^2.2.7",
     "styled-components": "^5.1.1"
   },
