--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "client": "cd client && npm run start",
     "install": "cd client && npm install",
     "build": "cd client && npm run build",
-    "devStart": "nodemon node server.js"
+    "devStart": "nodemon node server.js",
+    "heroku-postbuild": "npm run build"
   },
   "repository": {
     "type": "git",
