--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "# MVP Set up appointments, search for adoptable pets near user, search for adoption events near user, save login info (zip code, pets looking for, ages looking for, ect.),",
   "main": "server.js",
   "engines": {
-    "node": "12.14.1"
+    "node": "12.x",
+    "npm": "6.x"
   },
   "scripts": {
     "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
